# operating-systems

./: .checkpatch.conf  .clang-format  .gitignore  .shellcheckrc  404.html  CONTRIBUTING.md  COPYING.md  CPPLINT.cfg  Dockerfile  Makefile  README.md  REVIEWING.md  config.yaml  index.html  sitemap.xml
content/: .clang-format  CMakeLists.txt  CPPLINT.cfg
content/app-interact/lab/content/: arena.md  dbus.md  overview.md  time-server.md
content/app-interact/lab/quiz/: container-vs-vm.md  time-server-interop.md  time-server.md  vm-creation.md
content/app-interact/lecture/slides/: api.md  channels.md  defs.md  why.md
content/assignments/async-web-server/: README.md
content/assignments/async-web-server/src/: .gitignore  Makefile  aws.c  aws.h
content/assignments/async-web-server/tests/: .gitignore  CPPLINT.cfg  Makefile  grade.sh  run_all.sh
content/assignments/lambda-function-loader/: README.md
content/assignments/lambda-function-loader/src/: Makefile  ipc.c  ipc.h  server.c  server.h
content/assignments/lambda-function-loader/tests/: Makefile  advanced.c  basic.c  checker.sh  client.c  special.c
content/assignments/memory-allocator/: README.md
content/assignments/memory-allocator/src/: Makefile  helpers.h  osmem.c
content/assignments/memory-allocator/tests/: .ltrace.conf  Makefile  checker.py  run_tests.py
content/assignments/memory-allocator/utils/: .gitignore  block_meta.h  osmem.h  printf.c  printf.h
content/assignments/mini-libc/: README.md
content/assignments/mini-libc/libc/: Makefile  syscall.c
content/assignments/mini-libc/samples/: Makefile  read.c  self_test_mem_list.c  stat.c  truncate_ftruncate.c  write.c
content/assignments/mini-libc/src/: Makefile
content/assignments/mini-libc/tests/: Makefile  graded_test.c  graded_test.inc.sh  run_all_tests.sh  test_io.c  test_malloc_perm_notok.sh  test_memory.c  test_multiple_malloc_free.sh  test_nanosleep.sh  test_sleep.sh  test_truncate.sh
content/assignments/minishell/: README.md
content/assignments/minishell/checker/: .gitignore  out  results.txt  run_all.sh
content/assignments/minishell/src/: .gitignore  Makefile  cmd.c  cmd.h  main.c  mini-shell  utils.c  utils.h
content/assignments/minishell/tests/: .gitignore  Makefile  run_all.sh
content/assignments/minishell/util/: .gitignore
content/assignments/parallel-graph/: README.md
content/assignments/parallel-graph/src/: .gitignore  Makefile  os_graph.c  os_graph.h  os_list.c  os_list.h  os_threadpool.c  os_threadpool.h  parallel.c  serial.c
content/assignments/parallel-graph/tests/: Makefile  checker.py
content/assignments/parallel-graph/utils/: log  utils.h
content/chapters/app-interact/: CMakeLists.txt
content/chapters/app-interact/lab/: CMakeLists.txt  README.md
content/chapters/app-interact/lecture/: Makefile  slides.mdpp
content/chapters/compute/lab/: .gitignore
content/chapters/compute/lecture/: slides.mdpp
content/chapters/data/lecture/: slides.mdpp
content/chapters/io/lecture/: Makefile  slides.md  slides.mdpp
content/chapters/software-stack/lab/: README.md
content/chapters/software-stack/lecture/: Makefile  slides.mdpp  slides.mk
content/common/makefile/: defs.mk  single.mk  slides.mk
content/common/projects/: grade.sh
content/common/test/: Makefile  open.c
content/common/test/c/: .gitignore  open.c
content/common/test/slides/: .gitignore  Makefile  file2.mdpp  file3.mdpp
content/common/utils/: CMakeLists.txt  utils.h
content/common/utils/log/: CMakeLists.txt  log.c  log.h
content/common/utils/sock/: CMakeLists.txt  sock_util.c  sock_util.h
content/compute/lab/content/: copy-on-write.md  hardware-perspective.md  overview.md  scheduling.md  synchronization.md  user-level-threads.md
content/compute/lab/quiz/: apache2-strace.md  fiber-strace.md  mini-shell-stops-after-command.md  mmap-cow-flag.md  parent-faults-before-fork.md  parent-of-sleep-processes.md  processes-speedup.md  sleeping-on-a-fiber.md  tcb-libult-unikraft.md  tls-synchronization.md  tls-var-copies.md  ult-thread-ids.md  who-calls-execve-parent.md
content/compute/lecture/: Makefile
content/compute/lecture/quiz/: process-creation.md
content/compute/lecture/slides/: barrier.md  copy-on-write.md  intro.md  process-attributes.md  processes.md  scheduling-algorithms.md  thread-safety.md
content/data/lab/content/: arena.md  investigate-memory.md  memory-security.md  overview.md  process-memory.md  (+1 more)
content/io/lecture/: .gitignore
content/landing-page/: README.md
content/misc/: lab-setup.md  resources.md  rules-and-grading.md
content/software-stack/: Makefile
content/software-stack/lecture/: .gitignore
(+11569 files in other folders)
